added seed data

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 # Tron
 
 NB. Redis connection pool size must be >= than the max number of threads specified in the Procfile.
+
+# Init
+
+$ psql -c "drop database tron_development;"; psql -c "create database tron_development" && sequel -m db/migrations postgres://localhost/tron_development && foreman run ruby db/seeds.rb
