--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 # Tron
 
-NB. Redis connection pool size must be >= than the max number of threads specified in the Procfile.
+NB. Redis connection pool size must be >= than the max number of threads
+specified in the Procfile.
 
 # Init
 
