--- a/README
+++ b/README
@@ -8,21 +8,26 @@ $ psql -c "drop database tron_development;"; psql -c "create database tron_devel
 
 # Example Usage
 
-curl http://localhost:6000/servers \
+curl -i http://localhost:6000/servers \
     -u $PC_API_KEY
     
-curl http://localhost:6000/regions \
+curl -i http://localhost:6000/regions \
     -u $PC_API_KEY
 
-curl http://localhost:6000/funpacks \
+curl -i http://localhost:6000/funpacks \
     -u $PC_API_KEY
 
-curl http://localhost:6000/servers \
+curl -i http://localhost:6000/servers \
     -u $PC_API_KEY \
     -d name=minebnb \
     -d region=71519ec0-1515-42b9-b2f6-a24c151a6247 \
     -d funpack=9ed10c25-60ed-4375-8170-29f9365216a0
     
-curl http://localhost:6000/servers/11802871-bb53-4658-a55c-22f5bcc247b2/session \
+curl -i http://localhost:6000/servers/$SERVER/session \
     -u $PC_API_KEY \
-    -X POST
+    -X POST \
+    -d '{ "name": "Woodbury", "access": { "blacklist": []}, "settings": {}}'
+    
+curl -i http://localhost:6000/servers/$SERVER/session \
+    -u $PC_API_KEY \
+    -X DELETE
