--- a/README
+++ b/README
@@ -7,9 +7,9 @@ specified in the Procfile.
 
 ## Setup
 
-    $ createdb "tron_development" --encoding=utf-8
+    $ createdb partycloud --encoding=utf-8
     $ sequel --migrate-directory db/migrations \
-      postgres://localhost/tron_development
+      postgres://localhost/partycloud
     $ foreman run ruby db/seeds.rb
 
 ## Example Usage
